# tiny-ray-caster

./: CMakeLists.txt  README.md  map.cpp  oop_map.cpp  oop_map.h  poly-trc.cpp  poly-trc.h  polymorphism-trc.h  trc.cpp  window.cpp
output/: screen.ppm  test.ppm
